# CutiaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: FindSDL2_mixer.cmake
engine/include/: Audio.hpp  Component.hpp  Constants.hpp  CutiaSDL.hpp  EngineSDL.hpp  Game.hpp  GameObject.hpp  HelloWorld.hpp  Image.hpp  InputManager.hpp  Music.hpp  Resources.hpp  Scene.hpp  SceneGuitar.hpp  Script.hpp  Sound.hpp  Sprite.hpp  State.hpp  Text.hpp
engine/include/components/: Audio.hpp  Component.hpp  Image.hpp  Text.hpp
engine/src/: Audio.cpp  Camera.cpp  Collider.cpp  Game.cpp  GameObject.cpp  HelloWorld.cpp  Image.cpp  InputManager.cpp  Main.cpp  Player.cpp  Resources.cpp  Scene.cpp  SceneGuitar.cpp  Sound.cpp  Sprite.cpp  StageScene.cpp  State.cpp  Text.cpp  TitleScene.cpp
engine/src/components/: Text.cpp
